; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/hisilicon/hns3/hns3vf/extr_hclgevf_cmd.c_hclgevf_cmd_config_regs.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/hisilicon/hns3/hns3vf/extr_hclgevf_cmd.c_hclgevf_cmd_config_regs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hclgevf_cmq_ring = type { i64, i32, i32, %struct.hclgevf_dev* }
%struct.hclgevf_dev = type { %struct.hclgevf_hw }
%struct.hclgevf_hw = type { i32 }

@HCLGEVF_TYPE_CSQ = common dso_local global i64 0, align 8
@HCLGEVF_NIC_CSQ_BASEADDR_L_REG = common dso_local global i32 0, align 4
@HCLGEVF_NIC_CSQ_BASEADDR_H_REG = common dso_local global i32 0, align 4
@HCLGEVF_NIC_CSQ_DEPTH_REG = common dso_local global i32 0, align 4
@HCLGEVF_NIC_SW_RST_RDY = common dso_local global i32 0, align 4
@HCLGEVF_NIC_CMQ_DESC_NUM_S = common dso_local global i32 0, align 4
@HCLGEVF_NIC_CSQ_HEAD_REG = common dso_local global i32 0, align 4
@HCLGEVF_NIC_CSQ_TAIL_REG = common dso_local global i32 0, align 4
@HCLGEVF_NIC_CRQ_BASEADDR_L_REG = common dso_local global i32 0, align 4
@HCLGEVF_NIC_CRQ_BASEADDR_H_REG = common dso_local global i32 0, align 4
@HCLGEVF_NIC_CRQ_DEPTH_REG = common dso_local global i32 0, align 4
@HCLGEVF_NIC_CRQ_HEAD_REG = common dso_local global i32 0, align 4
@HCLGEVF_NIC_CRQ_TAIL_REG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hclgevf_cmq_ring*)* @hclgevf_cmd_config_regs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hclgevf_cmd_config_regs(%struct.hclgevf_cmq_ring* %0) #0 {
  %2 = alloca %struct.hclgevf_cmq_ring*, align 8
  %3 = alloca %struct.hclgevf_dev*, align 8
  %4 = alloca %struct.hclgevf_hw*, align 8
  %5 = alloca i32, align 4
  store %struct.hclgevf_cmq_ring* %0, %struct.hclgevf_cmq_ring** %2, align 8
  %6 = load %struct.hclgevf_cmq_ring*, %struct.hclgevf_cmq_ring** %2, align 8
  %7 = getelementptr inbounds %struct.hclgevf_cmq_ring, %struct.hclgevf_cmq_ring* %6, i32 0, i32 3
  %8 = load %struct.hclgevf_dev*, %struct.hclgevf_dev** %7, align 8
  store %struct.hclgevf_dev* %8, %struct.hclgevf_dev** %3, align 8
  %9 = load %struct.hclgevf_dev*, %struct.hclgevf_dev** %3, align 8
  %10 = getelementptr inbounds %struct.hclgevf_dev, %struct.hclgevf_dev* %9, i32 0, i32 0
  store %struct.hclgevf_hw* %10, %struct.hclgevf_hw** %4, align 8
  %11 = load %struct.hclgevf_cmq_ring*, %struct.hclgevf_cmq_ring** %2, align 8
  %12 = getelementptr inbounds %struct.hclgevf_cmq_ring, %struct.hclgevf_cmq_ring* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @HCLGEVF_TYPE_CSQ, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %56

16:                                               ; preds = %1
  %17 = load %struct.hclgevf_cmq_ring*, %struct.hclgevf_cmq_ring** %2, align 8
  %18 = getelementptr inbounds %struct.hclgevf_cmq_ring, %struct.hclgevf_cmq_ring* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  store i32 %19, i32* %5, align 4
  %20 = load %struct.hclgevf_hw*, %struct.hclgevf_hw** %4, align 8
  %21 = load i32, i32* @HCLGEVF_NIC_CSQ_BASEADDR_L_REG, align 4
  %22 = load i32, i32* %5, align 4
  %23 = call i32 @hclgevf_write_dev(%struct.hclgevf_hw* %20, i32 %21, i32 %22)
  %24 = load %struct.hclgevf_cmq_ring*, %struct.hclgevf_cmq_ring** %2, align 8
  %25 = getelementptr inbounds %struct.hclgevf_cmq_ring, %struct.hclgevf_cmq_ring* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 8
  %27 = ashr i32 %26, 31
  %28 = ashr i32 %27, 1
  store i32 %28, i32* %5, align 4
  %29 = load %struct.hclgevf_hw*, %struct.hclgevf_hw** %4, align 8
  %30 = load i32, i32* @HCLGEVF_NIC_CSQ_BASEADDR_H_REG, align 4
  %31 = load i32, i32* %5, align 4
  %32 = call i32 @hclgevf_write_dev(%struct.hclgevf_hw* %29, i32 %30, i32 %31)
  %33 = load %struct.hclgevf_hw*, %struct.hclgevf_hw** %4, align 8
  %34 = load i32, i32* @HCLGEVF_NIC_CSQ_DEPTH_REG, align 4
  %35 = call i32 @hclgevf_read_dev(%struct.hclgevf_hw* %33, i32 %34)
  store i32 %35, i32* %5, align 4
  %36 = load i32, i32* @HCLGEVF_NIC_SW_RST_RDY, align 4
  %37 = load i32, i32* %5, align 4
  %38 = and i32 %37, %36
  store i32 %38, i32* %5, align 4
  %39 = load %struct.hclgevf_cmq_ring*, %struct.hclgevf_cmq_ring** %2, align 8
  %40 = getelementptr inbounds %struct.hclgevf_cmq_ring, %struct.hclgevf_cmq_ring* %39, i32 0, i32 2
  %41 = load i32, i32* %40, align 4
  %42 = load i32, i32* @HCLGEVF_NIC_CMQ_DESC_NUM_S, align 4
  %43 = ashr i32 %41, %42
  %44 = load i32, i32* %5, align 4
  %45 = or i32 %44, %43
  store i32 %45, i32* %5, align 4
  %46 = load %struct.hclgevf_hw*, %struct.hclgevf_hw** %4, align 8
  %47 = load i32, i32* @HCLGEVF_NIC_CSQ_DEPTH_REG, align 4
  %48 = load i32, i32* %5, align 4
  %49 = call i32 @hclgevf_write_dev(%struct.hclgevf_hw* %46, i32 %47, i32 %48)
  %50 = load %struct.hclgevf_hw*, %struct.hclgevf_hw** %4, align 8
  %51 = load i32, i32* @HCLGEVF_NIC_CSQ_HEAD_REG, align 4
  %52 = call i32 @hclgevf_write_dev(%struct.hclgevf_hw* %50, i32 %51, i32 0)
  %53 = load %struct.hclgevf_hw*, %struct.hclgevf_hw** %4, align 8
  %54 = load i32, i32* @HCLGEVF_NIC_CSQ_TAIL_REG, align 4
  %55 = call i32 @hclgevf_write_dev(%struct.hclgevf_hw* %53, i32 %54, i32 0)
  br label %88

56:                                               ; preds = %1
  %57 = load %struct.hclgevf_cmq_ring*, %struct.hclgevf_cmq_ring** %2, align 8
  %58 = getelementptr inbounds %struct.hclgevf_cmq_ring, %struct.hclgevf_cmq_ring* %57, i32 0, i32 1
  %59 = load i32, i32* %58, align 8
  store i32 %59, i32* %5, align 4
  %60 = load %struct.hclgevf_hw*, %struct.hclgevf_hw** %4, align 8
  %61 = load i32, i32* @HCLGEVF_NIC_CRQ_BASEADDR_L_REG, align 4
  %62 = load i32, i32* %5, align 4
  %63 = call i32 @hclgevf_write_dev(%struct.hclgevf_hw* %60, i32 %61, i32 %62)
  %64 = load %struct.hclgevf_cmq_ring*, %struct.hclgevf_cmq_ring** %2, align 8
  %65 = getelementptr inbounds %struct.hclgevf_cmq_ring, %struct.hclgevf_cmq_ring* %64, i32 0, i32 1
  %66 = load i32, i32* %65, align 8
  %67 = ashr i32 %66, 31
  %68 = ashr i32 %67, 1
  store i32 %68, i32* %5, align 4
  %69 = load %struct.hclgevf_hw*, %struct.hclgevf_hw** %4, align 8
  %70 = load i32, i32* @HCLGEVF_NIC_CRQ_BASEADDR_H_REG, align 4
  %71 = load i32, i32* %5, align 4
  %72 = call i32 @hclgevf_write_dev(%struct.hclgevf_hw* %69, i32 %70, i32 %71)
  %73 = load %struct.hclgevf_cmq_ring*, %struct.hclgevf_cmq_ring** %2, align 8
  %74 = getelementptr inbounds %struct.hclgevf_cmq_ring, %struct.hclgevf_cmq_ring* %73, i32 0, i32 2
  %75 = load i32, i32* %74, align 4
  %76 = load i32, i32* @HCLGEVF_NIC_CMQ_DESC_NUM_S, align 4
  %77 = ashr i32 %75, %76
  store i32 %77, i32* %5, align 4
  %78 = load %struct.hclgevf_hw*, %struct.hclgevf_hw** %4, align 8
  %79 = load i32, i32* @HCLGEVF_NIC_CRQ_DEPTH_REG, align 4
  %80 = load i32, i32* %5, align 4
  %81 = call i32 @hclgevf_write_dev(%struct.hclgevf_hw* %78, i32 %79, i32 %80)
  %82 = load %struct.hclgevf_hw*, %struct.hclgevf_hw** %4, align 8
  %83 = load i32, i32* @HCLGEVF_NIC_CRQ_HEAD_REG, align 4
  %84 = call i32 @hclgevf_write_dev(%struct.hclgevf_hw* %82, i32 %83, i32 0)
  %85 = load %struct.hclgevf_hw*, %struct.hclgevf_hw** %4, align 8
  %86 = load i32, i32* @HCLGEVF_NIC_CRQ_TAIL_REG, align 4
  %87 = call i32 @hclgevf_write_dev(%struct.hclgevf_hw* %85, i32 %86, i32 0)
  br label %88

88:                                               ; preds = %56, %16
  ret void
}

declare dso_local i32 @hclgevf_write_dev(%struct.hclgevf_hw*, i32, i32) #1

declare dso_local i32 @hclgevf_read_dev(%struct.hclgevf_hw*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
